# goit-pythonweb-hw-01

./: .pre-commit-config.yaml  README.md  pyproject.toml
assets/uml/: diagrams-star-uml.mdj
src/goit_pythonweb_hw_01/task_1/: main.py
src/goit_pythonweb_hw_01/task_2/: main.py
src/goit_pythonweb_hw_01/utils/: logging_config.py
