[project]
name = "goit-pythonweb-hw-01"
version = "0.1.0"
description = "Design patterns, SOLID principles and logging task."
authors = [
    {name = "Oleksandr Romashko",email = "alex.rmshk@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [
  { include = "goit_pythonweb_hw_01", from = "src" }
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
